  - Load project invited groups and members eagerly in `ProjectTeam#fetch_members`
  - Add GitLab Workhorse version to admin dashboard (Katarzyna Kobierska Ula Budziszewska)
  - Add the `sprockets-es6` gem
  - Multiple trigger variables show in separate lines (Katarzyna Kobierska Ula Budziszewska)

v 8.10.2 (unreleased)
  - User can now search branches by name. !5144
  - Fix backup restore. !5459
  - Rescue Rugged::OSError (lock exists) when creating references. !5497
  - Disable MySQL foreign key checks before dropping all tables. !5472
  - Show release notes in tags list
  - Use project ID in repository cache to prevent stale data from persisting across projects. !5460
  - Ensure relative paths for video are rewritten as we do for images. !5474
  - Ensure current user can retry a build before showing the 'Retry' button. !5476
  - Fix expand all diffs button in compare view

v 8.10.1
  - Refactor repository storages documentation. !5428
  - Gracefully handle case when keep-around references are corrupted or exist already. !5430
  - Add detailed info on storage path mountpoints. !5437
  - Fix Error 500 when creating Wiki pages with hyphens or spaces. !5444
  - Fix bug where replies to commit notes displayed in the MR discussion tab wouldn't show up on the commit page. !5446
  - Ignore invalid trusted proxies in X-Forwarded-For header. !5454
  - Add links to the real markdown.md file for all GFM examples. !5458

v 8.10.0
  - Fix profile activity heatmap to show correct day name (eanplatter)
  - Speed up ExternalWikiHelper#get_project_wiki_path
  - Expose {should,force}_remove_source_branch (Ben Boeckel)
  - Add the functionality to be able to rename a file. !5049
  - Disable PostgreSQL statement timeout during migrations
  - Fix projects dropdown loading performance with a simplified api cal. !5113
  - Fix commit builds API, return all builds for all pipelines for given commit. !4849
  - Replace Haml with Hamlit to make view rendering faster. !3666